fix overflow

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,6 +8,11 @@ body {
   margin: 0;
 }
 
+body {
+  max-width: 100%;
+  overflow-x: hidden;
+}
+
 a {
   color: inherit;
   text-decoration: none;
